hphp/hack/test/typecheck/interface_override_parent.php.exp
ERROR: File "interface_override_parent.php", line 11, characters 7-7:
Constant FOO1 is defined concretely in multiple ancestors (Typing[4374])
  File "interface_override_parent.php", line 8, characters 9-12:
  One conflicting definition is here
  File "interface_override_parent.php", line 4, characters 9-12:
  Another conflicting definition is here
ERROR: File "interface_override_parent.php", line 11, characters 17-17:
Some members in class `A` are incompatible with those declared in type `B` (Typing[4374])
  File "interface_override_parent.php", line 4, characters 9-12:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "interface_override_parent.php", line 8, characters 9-12:
  `FOO1` inherited from `B`
  File "interface_override_parent.php", line 4, characters 9-12:
  conflicts with constant `FOO1` inherited from `I1`.
